fixes alignment issues

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -28,18 +28,22 @@
     
     .text {
         width: inherit;
+        height: inherit;
         // TODO: Fix height for username placement
         //height: inherit;
         position: absolute;
-        padding: @margin;
-        //display: table; 
+       // padding: @margin;
+        vertical-align:middle;
+        display: table; 
 
               
         p {
+            height: inherit;
+            width: inherit;
             text-shadow: black 1px 1px 5px;
             font-weight: bold;
             word-wrap: break-word;
-            //display: table-cell; 
+            display: table-cell; 
         }
     }
     .author{
